Update node version, post config and will to thrive post

--- a/src/markdown-pages/alignment.mdx
+++ b/src/markdown-pages/alignment.mdx
@@ -3,9 +3,9 @@ slug: "alignment"
 date: "2021-10-30"
 title: Moderation vs Alignment
 subtitle: ...It's "Alignment" that can set you free
-startBarTitle: "Moderation / Alignment"
+startBarTitle: Alignment
 order: 4
-icon: Url103_32x32_4
+icon: shell32_42
 ---
 
 _Heads up: This post is a cross between a brain-dump, diary entry, and a blog-post, and isn't yet really intended for a public audience. Since writing the first version, a few of these ideas have evolved, in ways that I would be glad to discuss with you! In the meantime, I hope you find it interesting, and I would welcome_ <a href="mailto:hi@michaeldawson.com.au">any feedback.</a>
