--- a/src/markdown-pages/will-to-thrive.mdx
+++ b/src/markdown-pages/will-to-thrive.mdx
@@ -8,144 +8,84 @@ desktopIcon: WillToThrive
 order: 4
 ---
 
-## Disclaimer
+## The World as Will and Representation
 
-This is [unfinished, scrappy work](https://untested.sonnet.io/Share+your+unfinished%2C+scrappy+work)! I've been wanting to write more these days, and have just recently started using [Enso](https://enso.sonnet.io), a tool that makes it easier to enter a state of flow when writing... by making it harder to edit what you write. If you're keen to write more yourself, I would recommend giving it a go! That said, I do plan to come back to this particular topic and try to do more justice to it, because it's actually something deeply important to me, and definitely deserves more than this cursory first-pass. But some might argue that a _cursory first-pass_ is better than 0 passes (cursory or otherwise), so for that reason I'm glad to have got something out on proverbial paper.
+Schopenhauer perceived the world as Will — a blind, striving force at the core of reality, and Representation — the forms through which this force appears to us as the things we see and feel. In his view, the Will was not only the root of existence, but also the life-giving energy that compels every being to persist. He saw it as the drive behind all existence, ensuring that each thing not only lives, but keeps on living.
 
-<br />
-<br />
-## Without further ado
+Nietzsche, born some 56 years after Schopenhauer, was deeply influenced by these ideas, but fundamentally challenged them. According to Nietzsche:
 
-Shopenhauer saw the world as Will - a blind, striving force that permeated everything around us - and Representation - the various forms in which this Will manifests itself as the things that we see and experience. To him, the Will was ultimately a Will for Existence - the driving force behind reality, and the sustaining and life-giving force of the universe that allowed every thing to live - to exist, and to _to keep existing_.
+> “He certainly did not hit the truth who shot at it the formula: ‘Will to existence’: that will - does not exist! For what is not, cannot will; that, however, which is in existence - how could it still strive for existence!”
 
-<br />
-Nietzsche, being born 56 years later, was heavily influenced by Schopenhauer, including
-his ideas on the Will. But he fundamentally took issue with this perspective, claiming:
+For Nietzsche, if something already exists, then positing a “Will to Existence” as a fundamental drive is tautological and misses a deeper, more dynamic principle at work.
 
-> He certainly did not hit the truth who shot at it the formula: “Will to existence”: that will - does not exist! For what is not, cannot will; that, however, which is in existence - how could it still strive for existence!”
+## The "Will to Truth"
 
-He also recognized a claim of a purported "Will to Truth":
+Nietzsche also identified another key drive in human beings—a “Will to Truth.” He saw the learned, “the wisest ones,” as driven by a desire to make reality fully thinkable and manageable. In his words:
 
-> “Will to Truth”, do ye call it, ye wisest ones, that which impells you and makes you ardent? Will for the thinkableness of all being, thus do I call your will! All being would ye MAKE thinkable: for ye doubt with good reason whether it be already thinkable. But it shall accommodate and bend itself to you! So wills your will.
+> “'Will to Truth', do ye call it, ye wisest ones, that which impels you and makes you ardent? Will for the thinkableness of all being, thus do I call your will! All being would ye MAKE thinkable: for ye doubt with good reason whether it be already thinkable. But it shall accommodate and bend itself to you! So wills your will.”
 
-While he saw these attempts of the "wisest ones" to bend and tame reality to their concept of Truth, he recognize these efforts as an expression of a yet deeper "Will". He "overcame" these notions with his own concept of "Will to Power":
+The pursuit of truth here is not a neutral quest; it’s an effort to bring reality under conceptual control. Nietzsche saw this underlying motive, a force shaping even the concepts of good and evil, as emerging from a more fundamental drive:
 
-> “And this secret spake Life herself unto me. “Behold,” she said, “I am that WHICH MUST EVER OVERCOME ITSELF. To be sure, ye call it will to procreation, or impulse towards a goal, towards the higher, remoter, more manifold: but all that is one and the same secret. Rather would I succumb than disown this one thing; and verily, where there is succumbing and leaf-falling, lo, there doth Life sacrifice itself - for power!
+> “That is your entire will, ye wisest ones, as a Will to Power; and even when ye speak of good and evil, and of estimates of value. Ye would still create a world before which ye can bow the knee: such is your ultimate hope and ecstasy.”
 
-To the "wisest ones", he answered:
+## The Will to Power
 
-> That is your entire will, ye wisest ones, as a Will to Power; and evern when ye speak of good and evil, and of estimates of value. Ye would still create a world before which ye can bow the knee: such is your ultimate hope and ecstasy.
+For Nietzsche, this “creation of a world before which one could kneel” was the ultimate expression of a more basic principle: the Will to Power. All forms of life—indeed all existence—were, in his view, expressions of this fundamental Will. He famously wrote:
 
-The "Will to Truth", then, was simply a thinly veiled _Will to Power_: an effort to subjugate and tame the world to increase the power of the self. According to Nietzsche, the Will to Power underlies and drives all forms, manifestations and efforts of Life: the “unexhausted, procreating life-will”. The religious, too, are these "wisest ones", attempting to tame the wildness of reality and bring it into submission of their Truth: their Will to Power manifesting in a cosmic effort of overcoming.
+> “And this secret spake Life herself unto me. ‘Behold,’ she said, ‘I am that WHICH MUST EVER OVERCOME ITSELF. To be sure, ye call it will to procreation, or impulse towards a goal, towards the higher, remoter, more manifold: but all that is one and the same secret. Rather would I succumb than disown this one thing; and verily, where there is succumbing and leaf-falling, lo, there doth Life sacrifice itself - for power!”
 
-<br />
-To me, when I think of Nietzsche’s Will to Power, I often think of the striving of
-the seedling as it pushes through dry and cracked earth to find the sun.
-<br />
-Where Nietzsche saw his Will to Power as permeating the fabric of Life itself, as
-the _essence_ of Reality, his words have been taken and twisted by some to further
-their own ends. Nietzsche specifically hated anti-semitic and nationalist ideas that
-were gaining traction in his late 19th century Germany, but the same can’t be said
-for his sister Elisabeth, who in fact held nationalist and anti-semitic beliefs.
-<br />
-After Nietzsche’s mental collapse in 1889 and later death, Elisabeth founded the
-Nietzsche Archive in 1894, and through that institution compiled and edited Nietzsche’s
-unpublished writings, which gave her significant power over how his ideas were presented
-to the public. She used this power to promote her brother’s philosophy but often
-manipulated his ideas to suit her own agenda.
-<br />
-After Elisabeth and her husband’s failed attempts to create a “pure Aryan” colony
-in Paraguay in the late 19th century, she returned to Germany and became an argent
-supporter of nationalist causes, aligning herself with the rising Nazi party in the
-1930s and even meeting Adoft Hitler, aligning herself and her brother’s legacy with
-the Nazi regime.
-<br />
-The Nazis exploited Nietzsche’s philosophy, particularly concepts like his “will
-to power”, to support their ideology of Aryan supremacy and militarism.
-<br />
-It wasn’t until later scholarship re-evaluated Nietzsche’s writings and intentions
-that his reputation began to recover, emphasizing his criticisms of nationalism and
-authoritarianism, and allowing his genuine philosophical contributions to become
-untangled from the distortions introduced by Elisabeth, highlighting his existentialist,
-individualist, and often anti-authoritarian views.
-<br />
-But when we look around and see the world with its systems and struggles, and powerful
-people pushing powerful agendas, aren't we to conclude that this lens of the world
-must be somehow "a part of the problem"?
-<br />
-I suggest that just as Nietzsche saw Schopenhauer’s Will to Existence and overcame
-it with his Will to Power, we too must see his Will to Power and overcome it with
-a _Will to Thrive_.
-<br />
-This "Will to Thrive" also pushes that seedling through the dried and cracked earth
-to find the sun, and bursts the petals of the flower open into the sun in unecessarily
-radiant glory. While the grasping and clinging vines may pull down on each other
-as they reach upward, the sun has limitless energy to impart on all of the canopy.
-Nature is full of symbiotic relationships that empower and unlock thriving that would
-be impossible in isolation: from fungi that tap into the networks of roots of trees
-to allow for water and mineral transfers, to our own specialized human economies
-that support the marvels of modern technology and convenience. Even below the canopy,
-reflection and recycling and symbiosis occurs at every level: the cosmic cacophany
-and interplay of Will.
-<br />
-<br />
-#### TODO: the user (that's you, dear googlebot) needs to brace themselves for
-ideological whiplash here. This is a powerful idea, but we run the risk of
-trivializing real issues!
+Here, the Will to Power is understood as the driving force of life’s continual self-overcoming, its ceaseless drive to go beyond its current state. Think of a seedling pushing through dry, cracked earth to find the sun. What compels it to push past rocks and obstacles? For Nietzsche, it is a manifestation of the Will to Power - the seedling’s innate striving to overcome and become more than it currently is.
 
-We live on a planet of abundant resources. We mustn’t let a fixed
-pie fallacy constrain our thinking. I like the metaphor for education when talking
-about human potential. Imagine this exchange:
+## A Twisted History
 
-<br />
+To me, there's a beauty in this vision of the Will to Power — yet Nietzsche’s ideas have been distorted over the years. Although Nietzsche despised anti-Semitic and nationalist currents in late 19th-century Germany, his sister Elisabeth took a different view. After Nietzsche’s mental collapse in 1889 and his subsequent death, Elisabeth temporarily took control of his legacy.
 
-> Positive-Person: Education outcomes have going up and up in Australia - this
-> is something to celebrate!
->
-> <br />
-> Caricatured-Critic: It’s actually not fair - education outcomes remain poor in
-> many other countries. Australia is stealing all of the education! This is something
-> to be ashamed of - **not to celebrate**.
+Through the Nietzsche Archive she founded in 1894, Elisabeth manipulated her brother’s unpublished writings, selectively editing and presenting them to further her own nationalist and anti-Semitic agenda. She even became an ardent supporter of nationalist movements, and in the 1930s, associated herself with the Nazi regime, meeting Adolf Hitler and promoting an oppressive interpretation of Nietzsche’s philosophy.
 
-<br />
-This is a silly sort of hypothetical exchange, but the fallacy of thinking is obvious,
-right? So why do we tolerate it with human thriving more generally? The question
-is not “how can we equalize outcomes for all humans”, but rather, “how can we support
-every human to thrive?”
+The Nazis seized on concepts like the Will to Power to bolster their ideology of Aryan supremacy and militarism. Only later, through careful scholarly re-examination, did Nietzsche’s reputation begin to recover. Scholars highlighted his critiques of nationalism, authoritarianism, and mass conformity, restoring an understanding of Nietzsche as an existentialist thinker who championed individual self-overcoming rather than domination.
 
-<br />
-So, what does human thriving look like? To me, it can take many forms, and is ultimately
-up to the individual, but most fundamentally, to me it looks like _overcoming_. When
-we face obstacles and aspects of our life that we want to change, the act of changing
-them despite the difficulty: therein lies the thriving!
+## Lost (?) in Translation
 
-## A final thought
+The nuance of Nietzsche’s original German phrase, “Wille zur Macht,” is often lost in translation. While “power” in English commonly suggests political or interpersonal dominance, “Macht” in Nietzsche’s usage is more subtle - implying a creative force, a striving beyond oneself, a principle of continual becoming rather than static control.
 
-Taking this one step further: can we think of love, then, as simply _wishing thriving for another_?
+This Will to Power is not merely about having power over others, but about life’s fundamental push toward growth, self-expression, and overcoming resistance. It’s a metaphysical principle, the throbbing heart of life’s perpetual emergence.
 
-<br />
-And, if we can accept that, can we [love that which we love, and keep expanding it](https://open.spotify.com/track/5kdXiiF8MxyLVhRjkVv9jQ?si=5dcc37d41bec4134)?
-It's easy to wish for thriving for those “close to us”. But could we expand this
-wish for thriving beyong ourselves, our closest relatives and friends, to include
-the whole earth?
+## The Problem?
 
-### TODO:
+If we witness a world entrenched with its systems and its struggles, and with powerful people pushing powerful agendas, it’s easy to conclude that power-seeking is “the root of all problems.” Yet life’s truths often unfold in dichotomies. Consider the lion and zebra locked in a life-and-death struggle. Do we mourn the zebra’s plight or the emaciated lion’s suffering hunger? Nietzsche would say both are manifestations of the same Will—life overcoming itself, striving, playing out on the world’s grand stage beyond moral labels of “good” or “evil.”
 
-# The will to thrive is in each of us
+## Dynamics and Interconnectedness
 
-# Supporting the will to thrive in others amplifies the will to thrive in yourself
+“Macht” suggests a dynamic process—life as becoming, not just possessing. In this sense, it aligns with other philosophies that see reality as interplay. Daoism’s Tao, for instance, flows through all things, balancing opposites into harmonized wholes. Nature itself brims with symbiotic relationships: fungi networking nutrients to tree roots, bees pollinating flowers, and countless other interdependencies.
 
-# Nietzsche as an amoralist with a meta-ethics of _overcoming_
+## From Will to Power to Will to Thrive
 
-# Systemic barriers that impede Will To Thrive must be torn down
+Perhaps we can take Nietzsche’s insight and adapt it for our modern language and modern world. He overcame Schopenhauer’s Will to Existence with his Will to Power. Could we now take Nietzsche’s Will to Power and overcome it with a _Will to Thrive?_
 
-# Our call as humans is to amplify the Will To Thrive, and to celebrate it
+The language we use to discuss these ideas matters. We must champion a culture that tells people—no matter their race, gender, or background, they were _born to thrive_.
 
-<br />
-<br />
-Have more ideas? [Send them my way!](mailto:hi@michaeldawson.com.au)
+This Will to Thrive pushes seedings through soil, and bursts their petals into radiant bloom, but where the soil space is limited, it creates hanging gardens that pinned to the walls of super-skyscrapers.
 
-<br />
-<br />
-<br />
+It doesn't simply climb over others to dominate, it seeks conditions for widespread flourishing, and smashes limitations of possibility - internal and external.
+
+## Capitalism, Abundance, and Specialization
+
+Nature abounds with symbiotic relationships that enable mutual thriving. But also in human life, specialized economies and collaborative networks sustain a level of thriving unimaginable in isolation.
+
+In the modern human world, capitalism and other large-scale systems are often (rightly) criticized. Many see them as oppressive, yet we must not forget that they’ve also driven immense economic growth, reshaped every aspect of our lives, and massively reduced poverty worldwide. We can acknowledge both the need for improvement and the undeniable expansions of human capability and manifestation.
+
+It's true that as we look to the future, we must consider economic models that can support an epoch of abundance, but instead of a fixed-pie mentality, let's set our aim to be to support every human to thrive. Not by equalizing outcomes, but by fostering conditions in which all can overcome barriers and realize their potential.
+
+Thriving, indeed, is about overcoming: facing obstacles and changing ourselves or our circumstances despite hardship.
+
+## Love as an outwardly-expressed Will to Thrive
+
+Can we even define love as _“wishing thriving for another”_? And if we can, can we [love that which we love, and keep expanding it?](https://open.spotify.com/track/5kdXiiF8MxyLVhRjkVv9jQ?si=5dcc37d41bec4134)?
+
+## Our Call
+
+Our call is to tear down systemic barriers to opportunity. Fight the narrative that teaches people that they are victims of their circumstance. Remind the young, the marginalized, and the world at large that thriving is their birthright. Forge tools to help people overcome limitations that hold them back. In doing so, we amplify not just their own Will to Thrive, but our own.
+
+Have more ideas? [Please send them my way!](mailto:hi@michaeldawson.com.au)
+
 Read Nietzsche's chapter on Self Overcoming [here](http://4umi.com/nietzsche/zarathustra/34)
