Clean up start bar etc

--- a/src/markdown-pages/birthday.mdx
+++ b/src/markdown-pages/birthday.mdx
@@ -3,6 +3,8 @@ slug: "birthday"
 date: "2021-11-06"
 title: "Birthday - share your experience with me?"
 icon: Jdbgmgr100
+startBarTitle: "Birthday"
+sbt: "Birthday"
 ---
 
 ![loop-hole](/blog-images/loop-hole.png)
