--- a/src/markdown-pages/intronet.mdx
+++ b/src/markdown-pages/intronet.mdx
@@ -2,13 +2,11 @@
 slug: "intronet"
 date: "2021-10-01"
 title: "Intronet"
-icon: Bulb_32x32_4
 desktopIcon: null
-startBarTitle: "Intronet"
-link: https://intronet-88bc5.web.app
+link: https://intronet.ai
 order: 3
 ---
 
 Redirecting...
 
-[Link](https://intronet-88bc5.web.app)
+[Link](https://intronet.ai)
