--- a/src/markdown-pages/will-to-thrive.mdx
+++ b/src/markdown-pages/will-to-thrive.mdx
@@ -1,9 +1,7 @@
 ---
 slug: "the-will-to-thrive"
 date: "2024-08-02"
-startBarTitle: "Will to thrive"
 title: "The will to thrive"
-icon: Wab321019_32x32_4
 desktopIcon: WillToThrive
 order: 4
 ---
@@ -30,7 +28,7 @@ The pursuit of truth here is not a neutral quest; it’s an effort to bring real
 
 ## The Will to Power
 
-For Nietzsche, this “creation of a world before which one could kneel” was the ultimate expression of a more basic principle: the Will to Power. All forms of life—indeed all existence—were, in his view, expressions of this fundamental Will. He famously wrote:
+For Nietzsche, this “creation of a world before which one could bow the knee" was the ultimate expression of a more basic principle: the Will to Power. All forms of life—indeed all existence—were, in his view, expressions of this fundamental Will. He famously wrote:
 
 > “And this secret spake Life herself unto me. ‘Behold,’ she said, ‘I am that WHICH MUST EVER OVERCOME ITSELF. To be sure, ye call it will to procreation, or impulse towards a goal, towards the higher, remoter, more manifold: but all that is one and the same secret. Rather would I succumb than disown this one thing; and verily, where there is succumbing and leaf-falling, lo, there doth Life sacrifice itself - for power!”
 
