--- a/src/markdown-pages/parents.mdx
+++ b/src/markdown-pages/parents.mdx
@@ -1,10 +1,10 @@
 ---
 slug: "impulse"
 date: "2021-10-01"
-title: "Impulse"
+title: "For Parents"
 desktopIcon: Impulse
 link: https://parents.impulse.training
-order: 2
+order: 3
 ---
 
 [Link](https://parents.impulse.training)
