--- a/src/markdown-pages/will-to-thrive.mdx
+++ b/src/markdown-pages/will-to-thrive.mdx
@@ -3,7 +3,7 @@ slug: "the-will-to-thrive"
 date: "2024-08-02"
 title: "The will to thrive"
 desktopIcon: WillToThrive
-order: 4
+order: 2
 ---
 
 ## The World as Will and Representation
@@ -76,7 +76,7 @@ It's true that as we look to the future, we must consider economic models that c
 
 Thriving, indeed, is about overcoming: facing obstacles and changing ourselves or our circumstances despite hardship.
 
-## Love as an outwardly-expressed Will to Thrive
+## Love as an outward-facing Will to Thrive
 
 Can we even define love as _“wishing thriving for another”_? And if we can, can we [love that which we love, and keep expanding it?](https://open.spotify.com/track/5kdXiiF8MxyLVhRjkVv9jQ?si=5dcc37d41bec4134)?
 
